--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="nav-item">
                     <li class="nav-item">
                     <li class="nav-item">
-                        <a href="#projects" class="nav-link smoothScroll">sPROJECTS</a>
+                        <a href="#projects" class="nav-link smoothScroll">PROJECTS</a>
                     </li>
                     
                 </ul>
