--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       
         
             <div class="mx-auto col-lg-4 col-md-6 col-12">
-                <h3 class="my-4 pt-4 pt-lg-0">Say hello</h3>
+                <h3 class="my-4 pt-4 pt-lg-0">!</h3>
 
                 <p class="mb-1">+9111111111</p>
 
